# Home-Assistant-Diagnostics-MCP-Server

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __main__.py  ha.py  run.py  server.py
tests/: __init__.py  test_smoke.py
