[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-assistant-diagnostics-mcp"
version = "1.0.0"
description = "Comprehensive Home Assistant diagnostic and health monitoring MCP server"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["home-assistant", "mcp", "diagnostics", "health-monitoring", "troubleshooting", "automation-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "mcp[cli]>=1.4.1",
    "httpx>=0.27.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
home-assistant-diagnostics-mcp = "app.run:main"
test = "pytest:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
log_cli = true
log_cli_level = "INFO"
markers = [
    "asyncio: Tests that use asyncio"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
